--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>
-  {{title}}
-</h1>
+    <div class="row top_buffer">
+        <div class="col-sm-3 col-md-1 sidebar">
+          <ul class="nav nav-sidebar">
+            <li><a href="#"></a></li>
+            
+                        <li class="active text-center">
+                          <span class="icon-user-plus"></span>
+                          <a href="#">Lead <span class="sr-only">(current)</span></a></li>
+
+            <li class="text-center">
+             <span class="icon-home"></span>
+            <a href="#">Order</a></li>
+            <li><a href="#">Customer</a></li>
+          </ul>
+         
+        </div>
+        <div class="col-md-6 main">
+<app-lead-form></app-lead-form>
+        </div>
+
+    </div>
