--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,12 @@ h1 {
   content: "\e973";
    font-size: 65px;
 }
+
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
